# CNTK

./: CMakeLists.txt  configure
Source/CNTKv2LibraryDll/: CompositeFunction.cpp  Function.cpp  PrimitiveFunction.cpp  PrimitiveFunction.h  PrimitiveOpType.h  Serialization.cpp
Source/CNTKv2LibraryDll/API/: CNTKLibrary.h
Source/CNTKv2LibraryDll/proto/onnx/: CNTKToONNX.cpp
Source/Readers/ReaderLib/: BlockRandomizer.cpp  LocalTimelineRandomizerBase.cpp  NoRandomizer.cpp
Tools/cmake/: common.cmake  cpp_common.cmake  debug.cmake  options.cmake
bindings/csharp/Swig/: CMakeLists.txt
bindings/python/cntk/io/: __init__.py
bindings/python/cntk/ops/: __init__.py
